FIX use of Common folder instead of Data

--- a/Macuisine/Front/setting/Application.ini
+++ b/Macuisine/Front/setting/Application.ini
@@ -2,4 +2,4 @@
 list+[]="Staq\Core\Data"
 list+[]="Staq\Theme\Bootstrap2"
 list+[]="Staq\Util\Auth"
-list+[]="Macuisine\Data"
+list+[]="Macuisine\Common"
