Add recipe model and create action

--- a/Macuisine/Common/setting/Model/Recipe.ini
+++ b/Macuisine/Common/setting/Model/Recipe.ini
@@ -1,5 +1,5 @@
 [schema]
 title="VarChar"
 
-author.attribute="Relation\ManyToOne"
-author.remote_class_type = "User"
+kitchen_id.attribute="Relation\ManyToOne"
+kitchen_id.remote_class_type = "Kitchen"
