--- a/Macuisine/Front/setting/Router.ini
+++ b/Macuisine/Front/setting/Router.ini
@@ -3,7 +3,11 @@ controller+[]="Model\\Recipe"
 
 [route+]
 home.view.uri="/"
-model_recipe.list.uri="/recipe"
+model_recipe.list.uri="/:kitchen/recettes"
+model_recipe.create.uri="/recette/ajouter"
+model_recipe.view.uri="/:kitchen/recette/:id"
+model_recipe.edit.uri="/:kitchen/recette/:id/edit"
+model_recipe.delete.uri="/:kitchen/recette/:id/delete"
 
 [auth]
 mode="include"
